<resources>
    <string name="restaurant_app_name">uFood Rest</string>
    <string name="app_name">uFood</string>
    <string name="other">Other</string>
    <string name="addcat">Add Category</string>
    <string name="selectcat">Select category...</string>
    <string name="tutorial_add_category">Tap to button add in actionbar to add new menu category</string>
    <string name="add">Add</string>
    <string name="edit_name_guide">Insert product name</string>
    <string name="price_guide">Insert price</string>
    <string name="ingredient_guide">Insert ingredients</string>
    <string name="name">Name:</string>
    <string name="price">Price:</string>
    <string name="select_type">Select type:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="food">Food</string>
    <string name="drink">Drink</string>
    <string name="gluten_free">Gluten free</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="nameerror">Name is mandatory</string>
    <string name="priceerror">Price is mandatory</string>
    <string name="sale">Sale</string>
    <string name="sale_guide">Insert a percentage</string>
    <string name="typeerror">Type is mandatory</string>
    <string name="saleerror">Error value: only form 1 to 100 %</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="tutorial_add_item">Tap to button add in actionbar to add new item</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="tutorial_no_orders">There are no orders for your restaurant at the moment!</string>
    <string name="cuisine_type">Type of Cuisine:</string>
    <string name="select_address_error">"Address selection failed: "</string>
    <string name="phone_number">Insert Phone Number</string>
    <string name="phone">Phone:</string>
    <string name="editwww">http://</string>
    <string name="friday">Friday</string>
    <string name="editseats">Insert number of seats</string>
    <string name="insert_svc_time">Average service time</string>
    <string name="mobile">Mobile Number:</string>
    <string name="items_ordered">Items ordered:</string>
    <string name="total_price">Total price:</string>
    <string name="date">Date:</string>
    <string name="additional_notes">Additional notes:</string>
    <string name="hour">Hour:</string>
    <string name="asian">Asian</string>
    <string name="african">African</string>
    <string name="bar">Bar</string>
    <string name="chinese">Chinese</string>
    <string name="regional">Regional</string>
    <string name="meat">Meat</string>
    <string name="sea">Sea food</string>
    <string name="fast">Fast Food</string>
    <string name="fusion">Fusion</string>
    <string name="japanese">Japanese</string>
    <string name="greek">Greek</string>
    <string name="hamburger">Hamburger</string>
    <string name="indian">Indian</string>
    <string name="italian">Italian</string>
    <string name="kebab">Kebab</string>
    <string name="mediterranean">Mediterranean</string>
    <string name="oriental">Oriental</string>
    <string name="sandwich">Sandwich shop</string>
    <string name="piadineria">Piadineria</string>
    <string name="pizzeria">Pizzeria</string>
    <string name="piedmont">Piedmont</string>
    <string name="fry">Fry shop</string>
    <string name="sudamerican">Sudamerican</string>
    <string name="vegetarian_shop">Vegetarian</string>
    <string name="select_time">Select Time</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="opening_hours">Opening hours:</string>
    <string name="profile">Profile</string>
    <string name="saturday">Saturday</string>
    <string name="tap">Tap</string>
    <string name="thursday">Thursday</string>
    <string name="tuesday">Tuesday</string>
    <string name="www">Web Site:</string>
    <string name="wednesday">Wednesday</string>
    <string name="sunday">Sunday</string>
    <string name="table_booking_dotted">Table booking:</string>
    <string name="monday">Monday</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">E-mail:</string>
    <string name="editAddress">Insert address</string>
    <string name="allow_tb">Allow table booking ?</string>
    <string name="address">Address:</string>
    <string name="edit_restaurant_profile_toolbar_title">Edit Profile</string>
    <string name="edit_restaurant_name">Insert restaurant name</string>
    <string name="editmail">Insert e-mail</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="camera">Take Photo</string>
    <string name="library">Choose from Library</string>
    <string name="title_add_photo">Add a photo</string>
    <string name="addresserror">Address is mandatory</string>
    <string name="address_not_found">Address not found</string>
    <string name="phoneerror">At least one phone number is required</string>
    <string name="emailerror">E-mail address is mandatory</string>
    <string name="seatserror">Number of seats is mandatory</string>
    <string name="incomplete_address">Address incomplete</string>
    <string name="yes">yes</string>
    <string name="evade">Evade</string>
    <string name="no">no</string>
    <string name="are_you_sure_cancel_order">Cancel order?</string>
    <string name="are_you_sure_evade_order">Evade order?</string>
    <string name="tutorial_no_reservation">There are no reservation for your restaurant at the moment!</string>
    <string name="seatsdot">Seats: </string>
    <string name="openinghourserror">Empty or invalid opening hours</string>
    <string name="available">Available</string>
    <string name="euro_symbol">€</string>
    <string name="percentage_symbol">%</string>
    <string name="reviews">Reviews</string>
    <string name="statistic">Statistics</string>
    <string name="about">About</string>
    <string name="title_dialog_photo">Add a photo</string>
    <string name="author"><b>@Author:</b></string>
    <string name="ufood_details">Ufood for Android is built using open source software</string>
    <string name="alfonso">Alfonso Lentini</string>
    <string name="luigi">Luigi Maio</string>
    <string name="giovanni">Giovanni Forcelli</string>
    <string name="mattia">Mattia Gregolin</string>
    <string name="hot_drink">Hot Drink</string>
    <string name="wine">Wine</string>
    <string name="appetizer">Appetizer</string>
    <string name="dessert">Dessert</string>
    <string name="side">Side</string>
    <string name="pizza">Pizza</string>
    <string name="search">Search</string>
    <string name="search_address">Search for an address...</string>
    <string name="not_found_location">Sorry, we\'re unable to locate your position. Insert an address in the search bar to manually search restaurants around you.</string>
    <string name="order">ORDER BY:</string>
    <string name="radius">RADIUS:</string>
    <string name="enum_distance">DISTANCE</string>
    <string name="radio_distance">DISTANCE</string>
    <string name="radio_price">PRICE</string>
    <string name="radio_ranking">RANKING</string>
    <string name="radio_alphabeticcally">(A-Z)</string>
    <string name="radio_500m">500 m</string>
    <string name="radio_1km">1 km</string>
    <string name="radio_2km">2 km</string>
    <string name="radio_5km">5 km</string>
    <string name="budget">BUDGET</string>
    <string name="payment">PAYMENTS</string>
    <string name="filter">Filter</string>
    <string name="cuisines">CUISINES</string>
    <string name="bancomat">Bancomat</string>
    <string name="credit_card">Credit Card</string>
    <string name="money">Money</string>
    <string name="ticket">Ticket:</string>
    <string name="info">Informations</string>
    <string name="addresslabel" >Address</string>
    <string name="phonelabel">Telephone</string>
    <string name="Menu">Menu</string>
    <string name="radio_250m">250 m</string>
    <string name="Email">Email</string>
    <string name="Website">Website</string>
    <string name="openinghours">Opening hours</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="paymentmethods">Payment methods</string>
    <string name="cusines">Cuisines:</string>
    <string name="attributes">Dietary needs:</string>
    <string name="Dishes">Dishes</string>
    <string name="budgett">Budget:</string>
    <string name="basket">Shopping Cart</string>
    <string name="menu">Menu</string>
    <string name="alimentar_issues">Alimentar Issues:</string>
    <string name="profile_name_tutor">Insert your name</string>
    <string name="profile_surname_tutor">Insert your surname</string>
    <string name="surname">Surname:</string>
    <string name="password">Password:</string>
    <string name="profile_pass_tutor">Insert a password</string>
    <string name="profile_pass_confirm_tutor">Confirm your password</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="orders">Orders</string>
    <string name="password_error">Password is mandatory </string>
    <string name="confirm_pass_err">You must confirm your password</string>
    <string name="pass_not_match">Passwords must be equal</string>
    <string name="surname_error">Surname is mandatory</string>
    <string name="lunchdot">Lunch:</string>
    <string name="dinnerdot">Dinner:</string>
    <string name="quantity">Quantity:</string>
    <string name="addtoCart">Add to Cart</string>
    <string name="cart_not_empty">The cart isn\'t empty, if go back the order will be deleted, continue ?</string>
    <string name="total_order_label">Total: €</string>
    <string name="products">products</string>
    <string name="pending_status">Pending</string>
    <string name="done_status">Done</string>
    <string name="rejected_status">Rejected</string>
    <string name="not_rated_error">Please, insert your rating!</string>
    <string name="error_no_review">Please, insert a short review!</string>
    <string name="tohours">To:</string>
    <string name="order_total">Elements in the cart</string>
    <string name="confirmChange">Confirm changes</string>
    <string name="change">Change</string>
    <string name="confirmBefore">Confirm changes before continue to chekout !</string>
    <string name="warning">Warning</string>
    <string name="success">Success</string>
    <string name="apply_filter">APPLY</string>
    <string name="takeaway">Take away</string>
    <string name="table">Eat here</string>
    <string name="awayortable">Do you want to take away your order or you prefer to eat in our restaurant?</string>
    <string name="choosehours">When do you prefer to eat?</string>
    <string name="numberofpeople">How many are you?</string>
    <string name="checkout">Checkout</string>
    <string name="hint_email">E-mail address</string>
    <string name="hint_password">Password</string>
    <string name="log_in">Log in</string>
    <string name="new_account">Create a new account</string>
    <string name="type">Type:</string>
    <string name="status">Status:</string>
    <string name="all">All</string>
    <string name="table_booking">Table booking</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="shqipe">Shqipe Dragaj</string>
    <string name="today">Today</string>
    <string name="lastweek">Last Week</string>
    <string name="lastmonth">Last Month</string>
    <string name="daylystatistics">daily statistics</string>
</resources>